samples/_failures_safe/1761406449_652413_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9c35dc0.c: In function ‘main’:
./samples/SAFE/__tmp_b9c35dc0.c:161:5: error: expected declaration or statement at end of input
  161 |     if (token_count <= 0) {
      |     ^~
./samples/SAFE/__tmp_b9c35dc0.c:161:5: error: expected declaration or statement at end of input
